--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,7 @@
     "editor.selectionBackground": "#404861",
     // "editor.selectionForeground": "#000000"
   },
+  "conventionalCommits.scopes": [
+    "global"
+  ],
 }
