Added new conventional commit designation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     // "editor.selectionForeground": "#000000"
   },
   "conventionalCommits.scopes": [
-    "global"
+    "global",
+    "Release Version"
   ],
 }
